ci: update db connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 # #spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 # #
 
-#spring.data.mongodb.host=171.252.189.151/32
-spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost}
-spring.data.mongodb.database=${DATABASE:penguindb}
+spring.data.mongodb.host=13.76.138.204/32
+spring.data.mongodb.uri=mongodb+srv://leehoa6903:7QNcb4K4Ig2kMcz0@cluster0.xop7z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.database=penguindb
 # 7QNcb4K4Ig2kMcz0
 # leehoa6903
 
