--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,10 @@
-# spring.data.mongodb.port=27017
-# spring.data.mongodb.host=localhost
-#  spring.data.mongodb.database=social_app
-#
-# #spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
-# #
-
-spring.data.mongodb.host=13.76.231.65/32
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.host=13.76.208.109/32
 spring.data.mongodb.uri=mongodb+srv://leehoa6903:7QNcb4K4Ig2kMcz0@cluster0.xop7z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 spring.data.mongodb.database=penguindb
-# 7QNcb4K4Ig2kMcz0
-# leehoa6903
 
-# spring.data.mongodb.username=leehoa6903
-# spring.data.mongodb.password=7QNcb4K4Ig2kMcz0
-# spring.data.mongodb.host=cluster0.9y09s.mongodb.net
-# spring.data.mongodb.database=penguindb
-# spring.data.mongodb.options=retryWrites=true&w=majority&appName=Cluster0
-# spring.data.mongodb.hostname=mongodb+srv://
-
-
+#spring.data.mongodb.database=fun-chat
 spring.servlet.multipart.enabled=true
 social_app.secret=social_app
 social_app.secretRefresh=social_app_refresh
