ci: update application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,4 @@ social_app.cloudName=diu2t7xwt
 social_app.cloudSecretKey=gcrMeCevplqkXzibw5Oh5Hlls9o
 
 logging.level.org.springframework.security=DEBUG
+logging.level.org.mongodb.driver=DEBUG
