--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,6 @@ social_app.cloudName=diu2t7xwt
 social_app.cloudSecretKey=gcrMeCevplqkXzibw5Oh5Hlls9o
 
 logging.level.org.springframework.security=DEBUG
-logging.level.org.mongodb.driver=DEBUG
+logging.level.org.springframework.web=ERROR
+logging.level.com.example=DEBUG
+#logging.level.org.mongodb.driver=DEBUG
