ci(cookie): cookie samesite

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,6 @@ social_app.cloudSecretKey=gcrMeCevplqkXzibw5Oh5Hlls9o
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=ERROR
+
+server.servlet.session.cookie.same-site=none
 #logging.level.org.mongodb.driver=DEBUG
